src/objects/ssv4__deployPlan__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <description>Setting for deploy</description>
    <fields>
        <fullName>ssv4__Hour__c</fullName>
        <label>Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__LastDeployment__c</fullName>
        <inlineHelpText>Last successful commit deploy. Changeset Id.</inlineHelpText>
        <label>Last Deployment</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Minute__c</fullName>
        <label>Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <default>true</default>
                    <label>00</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__Repo__c</fullName>
        <label>Repo</label>
        <referenceTo>ssv4__Repo__c</referenceTo>
        <relationshipName>Deploy_Plans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__branchName__c</fullName>
        <inlineHelpText>If this field is empty we will use a &apos;master&apos; branch</inlineHelpText>
        <label>Branch Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__deployType__c</fullName>
        <inlineHelpText>You can deploy Full Repo or only last changes</inlineHelpText>
        <label>Deploy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Repo</fullName>
                </value>
                <value>
                    <fullName>Only last changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__link__c</fullName>
        <formula>HYPERLINK(&apos;https://bitbucket.org/&apos; +  ssv4__repName__c  + &apos;/get/&apos; + ssv4__branchName__c + &apos;.zip&apos;, &apos;Click&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if you are now logged to Repo, you can press this link to download source code</inlineHelpText>
        <label>Download Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__repName__c</fullName>
        <inlineHelpText>Repository name</inlineHelpText>
        <label>Repository Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__runTests__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If you need to run tests after deployment please check this checbox</inlineHelpText>
        <label>Run Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__targetOrg__c</fullName>
        <label>Target Org</label>
        <referenceTo>ssv4__OrgSrc__c</referenceTo>
        <relationshipName>Deploy_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ssv4__weekDays__c</fullName>
        <label>Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Plan</label>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Deploy Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Plans</pluralLabel>
    <recordTypes>
        <fullName>ssv4__Schedule</fullName>
        <active>true</active>
        <description>Shedule record type</description>
        <label>Schedule</label>
    </recordTypes>
    <recordTypes>
        <fullName>ssv4__continuos</fullName>
        <active>true</active>
        <label>Continuos integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>ssv4__standard</fullName>
        <active>true</active>
        <description>Regular recordType</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>